hphp/hack/test/typecheck/hh_fixme_disjunction.php.exp
File "hh_fixme_disjunction.php", line 42, characters 13-15:
Invalid argument (Typing[4110])
File "hh_fixme_disjunction.php", line 34, characters 16-19:
Expected ?(<expr#1> | <expr#2>)
File "hh_fixme_disjunction.php", line 9, characters 23-23:
  via this generic T
File "hh_fixme_disjunction.php", line 33, characters 50-50:
But got <expr#3>
File "hh_fixme_disjunction.php", line 42, characters 13-15:
  where '<expr#3>' is a reference to this expression
